k8s/edge/hosts/serverless/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
  namespace: nuclio
spec:
  parentRefs:
    - name: public
      namespace: edge
      sectionName: https-serverless
  hostnames:
    - serverless.simproject.kr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: bouncer
      backendRefs:
        - name: infra-nuclio-dashboard
          port: 8070
